--- a/app/templates/game.hbs
+++ b/app/templates/game.hbs
@@ -29,11 +29,7 @@
       <img
         src={{randomFlag.file_url}}
         class='w-30 h-20 rounded-md object-cover hover:opacity-90 duration-300 ease-in-out cursor-pointer
-          {{if
-            this.isFlagsGrayscale
-            "grayscale hover:grayscale-0 "
-            "grayscale-0"
-          }}'
+          {{if this.isFlagsGrayscale "grayscale hover:grayscale-0" "grayscale-0"}}'
         {{on 'click' (fn this.onFlagClick randomFlag.name)}}
       />
     {{/each}}
